# Programmazione

./: CMakeLists.txt  Date.cpp  Date.h  Task.cpp  Task.h  TodoList.cpp  TodoList.h  main.cpp
googleTest/: CMakeLists.txt  DateTest.cpp  TaskTest.cpp  TodoListTest.cpp  runAllTests.cpp
googleTest/lib/googletest/.github/workflows/: gtest-ci.yml
googleTest/lib/googletest/ci/: linux-presubmit.sh
googleTest/lib/googletest/docs/: advanced.md  faq.md  gmock_cook_book.md  primer.md
googleTest/lib/googletest/docs/reference/: testing.md
googleTest/lib/googletest/googlemock/: CMakeLists.txt
googleTest/lib/googletest/googlemock/src/: gmock-spec-builders.cc
googleTest/lib/googletest/googlemock/test/: gmock-actions_test.cc  gmock-matchers-arithmetic_test.cc  gmock-matchers-comparisons_test.cc  gmock-matchers-containers_test.cc  gmock-matchers-misc_test.cc  gmock-matchers_test.h  gmock-port_test.cc  gmock-pp_test.cc  gmock-spec-builders_test.cc  gmock_leak_test.py  gmock_leak_test_.cc  gmock_link_test.h  gmock_output_test.py  gmock_stress_test.cc  gmock_test_utils.py
googleTest/lib/googletest/googletest/: CMakeLists.txt
googleTest/lib/googletest/googletest/cmake/: internal_utils.cmake
googleTest/lib/googletest/googletest/samples/: sample10_unittest.cc  sample1_unittest.cc  sample2_unittest.cc  sample3_unittest.cc  sample5_unittest.cc  sample6_unittest.cc  sample7_unittest.cc  sample8_unittest.cc  sample9_unittest.cc
googleTest/lib/googletest/googletest/src/: gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-port.cc  gtest-printers.cc  gtest.cc  (+1 more)
(+85 files in other folders)
